<resources>
    <string name="app_name">MontyHallGame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">The Monty Hall Problem</string>
    <string name="new_text">New Game</string>
    <string name="continue_text">Continue</string>
    <string name="about_text">About</string>
    <string name="about">This is St. Lawrence Univerity CS450 Implementation of the MOnty Hall Problem</string>
    <string name="about_title_text">About the Monty Hall Problem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_door">Choose a door</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="total">Total</string>
    <string name="switch_text">Switch</string>
    <string name="stay_text">Stay</string>
</resources>
