<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/wins"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/loss"/>

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/total"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_door"
        android:textSize="26sp">

    </TextView>

    <include
        layout="@layout/doors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </include>

</FrameLayout>